# DM-VTON

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  get_train_artifact.py  mobile_unet_v2.py  mobile_unet_v3.py  registry.py  requirements.txt  setup.cfg  test.py  test_fs.py  test_fs_pf.py  test_srmgn.py  test_srmgn_pf.py  test_srmgn_pf_video.py  train_PBAFN_e2e.py  train_PBAFN_e2e_fs.py  train_PBAFN_e2e_temp.py  train_PBAFN_stage1.py  train_PBAFN_stage1_fs.py  train_PFAFN_e2e.py  train_PFAFN_e2e_fs.py  train_PFAFN_stage1.py  train_PFAFN_stage1_fs.py  train_pb_e2e.py  train_pb_warp.py  train_pf_all.py  train_pf_all_tune.py  train_pf_e2e.py  train_pf_warp.py  val.py  val_noedge.py  visualize.py
base/: base_trainer.py
data/: aligned_dataset.py  aligned_dataset_test.py  base_dataset.py  custom_dataset_data_loader_test.py  data_loader_test.py  dresscode_dataset.py  test_dataset.py  viton_dataset.py
dataloader/: dataloaders.py  dresscode_dataset.py  viton_dataset.py
losses/: __init__.py  tv_loss.py  vgg_loss.py
models/: README.md  afwm.py  afwm_pb.py  afwm_test.py  base_model.py  mobile_unet_extractor.py  mobile_unet_generator.py  networks.py  style_swin.py  vitunet.py  wuton.py  yolov5_extractor.py
old/: metrics.py  test_fs.sh  test_fs_pf.py  test_srmgn_pf_video.py  test_srmgn_video.sh  train_PBAFN_e2e.py  train_PBAFN_e2e.sh  train_PBAFN_e2e_temp.py  train_PBAFN_stage1.py  train_PBAFN_stage1.sh  train_PFAFN_e2e.py  train_PFAFN_e2e.sh  train_PFAFN_stage1.py  train_PFAFN_stage1.sh  val.py
opt/: base_opt.py  test_opt.py  train_opt.py
options/: base_options.py  test_base_options.py  test_video_options.py
output/: FS_PF_e2e_align_100.txt  PFAFN_PF_e2e_align_mobile_dresscode_100.txt  PFAFN_PF_stage1_align_mobile_dresscode_100.txt  SRMGN_PB_e2e_align_200.txt  SRMGN_PB_e2e_align_dresscode_100.txt  SRMGN_PB_e2e_align_dresscode_200.txt  SRMGN_PB_stage1_align_200.txt  temp.txt  (+12 more)
(+364 files in other folders)
