# Project-wide configuration file, can be used for package metadata and other tool configurations
# Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments
# Local usage: pip install pre-commit, pre-commit run --all-files
# Modified from: https://github.com/ultralytics/yolov5/blob/master/utils/dataloaders.py

[metadata]
license_file = LICENSE
description_file = README.md

[isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 100
# see: https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
multi_line_output = 0
include_trailing_comma = True

[flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
max-line-length = 100
max-complexity = 15
verbose = 2
format = pylint
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
# see: https://www.flake8rules.com/
select = C, E, W, F
ignore = C101, C407, C408, E127, E203, E402, E731, W503
    # C101: Coding magic comment not found
    # C407: Unnecessary <dict/list> comprehension - <builtin> can take a generator
    # C408: Unnecessary <dict/list/tuple> call - rewrite as a literal
    # E127: continuation line over-indented for visual indent
    # E203	Whitespace before ':'
    # E402: module level import not at top of file
    # E731: Do not assign a lambda expression, use a def
    # W503	Line break occurred before a binary operator
per-file-ignores =
  **/__init__.py: F401, F403, F405
  models/common/correlation.py: E101, E501, W191
    # E101: indentation contains mixed spaces and tabs
    # E501: line too long
    # F401: module imported but unused
    # F403: ‘from module import *’ used; unable to detect undefined names
    # F405:	Name may be undefined, or defined from star imports: module
    # W191: indentation contains tabs
exclude =
    exp/*